forgot link added to register form

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,7 +40,7 @@
                     <div class="mb-3">
                         <button class="btn" type="submit">Register</button>
                     </div>
-                    <div style="color: #fff;">Already have an account ? <a href="login.html">Login here</a></div>
+                    <div style="color: #fff;">Already have an account ? <a href="/login">Login here</a></div>
                 </form>
             </div>
         </div>
