--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -9,7 +9,7 @@
                 <div class="heading mb-4">
                     <h3>Forgot Password</h3>
                 </div>
-                <form action="/forgot" method="post">
+                <form action="/forgot" method="POST">
                     <div class="form-input">
                         <span style="position: absolute;"><i class="fa fa-envelope" aria-hidden="true"></i></span>
                         <input type="email" name="email" placeholder="Enter Your Email" autofocus required>
