Removed extra closing tags

--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -17,12 +17,11 @@
                     <div class="mb-3">
                         <button class="btn" type="submit">Reset Password</button>
                     </div>
-                    <div><a href="/login">Go Back..</a></div>
+                    <div><a href="/login">Go Back..</a>
+                    </div>
+                </form>
             </div>
-            </form>
         </div>
     </div>
-</div>
-
 </div>
 <%- include("partials/footer") %>
