--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,19 +34,20 @@
                     </div>
                     <div class="form-input">
                         <span> <i class="fas fa-id-card"></i></span>
-                        <textarea name="address" cols="56" rows="6" placeholder="Your Complete Address"
-                            required></textarea>
+                        <textarea name="address" cols="56" rows="6" placeholder="Your Complete Address" required>
+                            </textarea>
                     </div>
                     <div class="mb-3">
                         <button class="btn" type="submit">Register</button>
                     </div>
-                    <div style="color: #fff;">Already have an account ? <a href="/login">Login here</a></div>
+                    <div style="color: #fff;">Already have an account ? <a href="/login">Login here</a>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
 
-</div>
+
 
 <%- include("partials/footer") %>
