--- a/views/partials/form/header.ejs
+++ b/views/partials/form/header.ejs
@@ -25,7 +25,8 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
                     <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home <span
-                            class="sr-only"></span></a>
+                            class="sr-only"></span>
+                    </a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
