--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,94 +11,229 @@
         <div style="margin-top: 25px;" class="col-md-6 text-center order-2 order-md-2 mb-5 mb-md-0">
             <div class="row justify-content-center">
                 <div class="col-10 col-lg-8 blurb">
-                    <h1>NAME OF WEBAPP</h1>
+                    <h1>JAL</h1>
                     <!--<i class="fa fa-tint icon" aria-hidden="true"></i> -->
-                    <img style="height: 100px; width: 100px;"
-                        src="https://toppng.com/uploads/preview/drop-simple-transparentpng-image-water-drop-logo-11562911481murprhiazy.png"
-                        alt="" class="d-none d-lg-inline">
+                    <img style="height: 100px; width: 100px;" src="/photo/water.png" alt="" class="d-none d-lg-inline">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, odio. Error
                         veritatis, eveniet culpa nisi excepturi sunt vitae distinctio id facere, vel dolor? Illo,
                         repellendus dolorem iste id rerum quasi! Lorem ipsum dolor sit amet consectetur adipisicing
                         elit. Expedita aliquid odio vero praesentium quasi eius dolore adipisci et, doloribus error
                         nisi optio, deleniti neque dolor, sapiente harum cupiditate debitis perferendis.</p>
-                    <button class="btn btn-large"><a href="#"></a> Read More -> </button>
+                    <a class="btn" href="/about">Read More -></a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<section style="margin-top: 30px;">
-    <div class="container">
-        <div class="box-area">
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 499 - 150 ltr/day</h3>
-                    <h5>Benefits: Unlimited 4500 litre of water(150 ltr/day) for 30 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="#">BUY</a>
+<section class="section-tours">
+    <!-- <div class="u-center-text u-margin-bottom-big ">
+           <h2 class="heading-secondary">
+               Plans
+           </h2>
+       </div> -->
+
+    <div class="rowa">
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--1">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--1">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">150 Litre/Day</li>
+                            <li>Unlimited 4500 litres of water (150 ltr/day) for 30 days</li>
+                        </ul>
+                    </div>
+
                 </div>
-            </div>
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 599 - 200 ltr/day</h3>
-                    <h5>Benefits: Unlimited 6000 litre of water(200 ltr/day) for 30 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="#">BUY</a>
-                </div>
-            </div>
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 399 - 100 ltr/day</h3>
-                    <h5>Benefits: Unlimited 3000 litre of water(100 ltr/day) for 30 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="#">BUY</a>
-                </div>
-            </div>
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 2394 - 100 ltr/day</h3>
-                    <h5>Benefits: Unlimited 18000 litre of water(100 ltr/day) for 180 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="#">BUY</a>
-                </div>
-            </div>
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 2994 - 150 ltr/day</h3>
-                    <h5>Benefits: Unlimited 27000 litre of water(150 ltr/day) for 180 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="#">BUY</a>
-                </div>
-            </div>
-            <div class="single-box">
-                <div class="image-area"></div>
-                <div class="image-text">
-                    <span class="header-text">
-                        <h1><strong>Plans</strong></h1>
-                    </span>
-                    <h3><i class="fas fa-rupee-sign"></i> 3594 - 200 ltr/day</h3>
-                    <h5>Benefits: Unlimited 36000 litre of water(200 ltr/day) for 180 days. </h5>
-                    <a class="btn btn-group-lg btn-success" href="/pay">BUY</a>
+                <div class="card__side card__side--back card__side--back-1">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"> <i class="fas fa-rupee-sign    "> 499</i> </p>
+                        </div>
+                        <a href="/pay" class="btn btn--white btn-animated">Pay now!</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--2">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--2">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">200 Litre/Day</li>
+                            <li>Unlimited 6000 litres of water(200 ltr/day) for 30 days</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="card__side card__side--back card__side--back-2">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"><i class="fas fa-rupee-sign    "> 599</i> </p>
+                        </div>
+                        <a href="/pay" class="btn btn--white btn-animated">Pay now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--3">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--3">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">100 Litre/Day</li>
+                            <li>Unlimited 3000 litres of water (100 ltr/day) for 30 days</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="card__side card__side--back card__side--back-3">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"> <i class="fas fa-rupee-sign    "> 399</i> </p>
+                        </div>
+                        <a href="/pay" class="btn btn--white btn-animated">Pay now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
+
+
+
+
+</section>
+
+<section class="sectiona-tours">
+    <!-- <div class="u-center-text u-margin-bottom-big ">
+            <h2 class="heading-secondary">
+                Plans
+            </h2>
+        </div> -->
+
+    <div class="rowa">
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--1">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--1">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">100 Litre/Day</li>
+                            <li>Unlimited 18000 litres of water (100 ltr/day) for 180 days</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="card__side card__side--back card__side--back-1">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"><i class="fas fa-rupee-sign    "> 2394</i></p>
+                        </div>
+                        <a href="/pay" class="btn btn--white">Pay now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--2">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--2">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">150 Litre/Day</li>
+                            <li> Unlimited 27000 litres of water(150 ltr/day) for 180 days.</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="card__side card__side--back card__side--back-2">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"><i class="fas fa-rupee-sign    "> 2994</i> </p>
+                        </div>
+                        <a href="/pay" class="btn btn--white">Pay now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-1-of-3">
+            <div class="card">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--3">
+                        &nbsp;
+                    </div>
+                    <h4 class="card__heading">
+                        <span class="card__heading-span card__heading-span--3">Plans</span>
+
+                    </h4>
+                    <div class="card__details">
+                        <ul>
+                            <li class="first">200 Litre/Day</li>
+                            <li>Unlimited 36000 litres of water(200 ltr/day) for 180 days.</li>
+                        </ul>
+                    </div>
+
+                </div>
+                <div class="card__side card__side--back card__side--back-3">
+                    <div class="card__cta">
+                        <div class="card__price-box">
+                            <p class="card__price-only">Only</p>
+                            <p class="card__price-value"><i class="fas fa-rupee-sign    "> 3594</i> </p>
+                        </div>
+                        <a href="/pay" class="btn btn--white">Pay now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+
 </section>
 
 
