--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,38 +1,80 @@
 <%- include("partials/form/header") %>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6 col-md-6 d-none d-md-block image-container">
-
-        </div>
-        <div class="col-lg-6 col-md-6 form-container">
-            <div class="col-lg-8 col-md-12 col-sm-9 col-xs-12 form-box text-center">
-                <div class="heading mb-4">
-                    <h3><i class="fa fa-sign-in" aria-hidden="true"></i> Login To Your Account</h3>
+<div class="container">
+    <div class="forms-container">
+        <div class="signin-signup">
+            <form action="/login" method="POST" class="sign-in-form">
+                <h2 class="title">Login</h2>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="username" placeholder="Username" />
                 </div>
-                <form action="/login" method="post">
-                    <div class="form-input">
-                        <span> <i class="fas fa-user-alt"></i></span>
-                        <input type="text" name="username" placeholder="Username" required>
-                    </div>
-                    <div class="form-input">
-                        <span> <i class="fa fa-lock" aria-hidden="true"></i></span>
-                        <input type="password" name="password" placeholder="Password" required>
-                    </div>
-                    <div class="mb-3">
-                        <button class="btn" type="submit">Login</button>
-                    </div>
-                    <div style="color: #fff;">
-                        <a href="/forgot">Forgot Password ?</a>
-                    </div>
-                    <div style="color: #fff;">Don't have an account ? <a href="/register">Register here</a>
-                    </div>
-                </form>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="password" placeholder="Password" />
+                </div>
+                <input type="submit" value="Login" class="btn solid" />
+                <a href="/forgot">Forgot Password</a>
+            </form>
+
+            <form action="/register" method="POST" class="sign-up-form">
+                <h2 class="title">Register</h2>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="fullName" placeholder="Full Name" required />
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="username" placeholder="Username" required />
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" placeholder="Email" required />
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="password" placeholder="Password" required />
+                </div>
+                <div class="input-field">
+                    <i class="fas fa-lock"></i>
+                    <input type="text" name="address" placeholder="Address" required />
+                </div>
+                <input type="submit" class="btn" value="Sign up" />
+            </form>
+        </div>
+    </div>
+
+    <div class="panels-container">
+        <div class="panel left-panel">
+            <div class="content">
+                <h3>New here ?</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
+                    ex ratione. Aliquid!
+                </p>
+                <button class="btn transparent" id="register-btn">
+                    Register
+                </button>
             </div>
+            <img src="/photo/secure.svg" class="image" alt="" />
+        </div>
+        <div class="panel right-panel">
+            <div class="content">
+                <h3>One of us ?</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+                    laboriosam ad deleniti.
+                </p>
+                <button class="btn transparent" id="login-btn">
+                    Login
+                </button>
+            </div>
+            <img src="/photo/glass.svg" class="image" alt="" />
         </div>
     </div>
 </div>
 
 
+<script src="/js/form.js"></script>
 
 <%- include("partials/footer") %>
