--- a/views/partials/form/header.ejs
+++ b/views/partials/form/header.ejs
@@ -8,49 +8,12 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/form.css" type="text/css">
     <script src="https://kit.fontawesome.com/d25a039e29.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
     <title>JAL</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/"><i class="fas fa-blog"></i>Web App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#blogAppContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="blogAppContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
-                    <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home <span
-                            class="sr-only"></span>
-                    </a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <ul class="navbar-nav my-2 my-lg-0">
-                    <% if(!currentUser){ %>
-                    <li>
-                        <a class="nav-link" href="/login">
-                            <i class="fa fa-sign-in" aria-hidden="true"></i> Login
-                        </a>
-                    </li>
-                    <li class="nav-right">
-                        <a class="nav-link" href="/register"><i class="fas fa-user-plus"></i> SignUp</a>
-                    </li>
-                    <% }else{ %>
-                    <li class="nav-right">
-                        <a class="nav-link" href="#">Signed In as <%= currentUser.username %></a>
-                    </li>
-                    <li class="nav-right">
-                        <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt"></i> Logout</a>
-                    </li>
-                    <% } %>
-                </ul>
-            </form>
-        </div>
+    <nav id="mainNavbar" class="navbar fixed-top">
+        <a class="navbar-brand" href="/"><img src="/photo/water.png" alt="" srcset="">JAL</a>
     </nav>
     <% if(error && error.length > 0){ %>
     <div style="margin: 0;" class="alert alert-danger" role="alert">
