--- a/views/pay.ejs
+++ b/views/pay.ejs
@@ -1,4 +1,7 @@
 <%- include("partials/header") %>
 
-<h1>Secret Page</h1>
+<h1>Buy For Rs.</h1>
+<form action="/pay" method="POST">
+    <input type="submit" value="Buy">
+</form>
 <%- include("partials/footer") %>
