--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,32 +1,33 @@
 <%- include("partials/form/header") %>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6 col-md-6 d-none d-md-block image-container">
 
-        </div>
-        <div class="col-lg-6 col-md-6 form-container">
-            <div class="col-lg-8 col-md-12 col-sm-9 col-xs-12 form-box text-center">
-                <div class="heading mb-4">
-                    <h3>Reset Password</h3>
+<div class="container">
+    <div class="forms-container">
+        <div class="signin-signup">
+            <form action="/reset/<%= token %>" method="POST" class="sign-in-form">
+                <h2 class="title">Reset Password</h2>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="password" name="password" placeholder="New Password" autofocus required>
                 </div>
-                <form action="/reset/<%= token %>" method="post">
-                    <div class="form-input">
-                        <span> <i class="fa fa-lock" aria-hidden="true"></i></span>
-                        <input type="password" name="password" placeholder="New Password" autofocus="autofocus"
-                            required>
-                    </div>
-                    <div class="form-input">
-                        <span> <i class="fa fa-lock" aria-hidden="true"></i></span>
-                        <input type="password" name="confirm" placeholder="Confirm Password" required>
-                    </div>
-                    <div class="mb-3">
-                        <button class="btn " type="submit">Update</button>
-                    </div>
-            </div>
+                <div class="input-field">
+                    <i class="fas fa-user"></i>
+                    <input type="password" name="confirm" placeholder="Confirm Password" required>
+                </div>
+                <input type="submit" value="Update" class="btn solid" />
             </form>
         </div>
     </div>
-</div>
 
+    <div class="panels-container">
+        <div class="panel left-panel">
+            <div class="content">
+                <h3>Reset Password</h3>
+                <p>
+                    Enter the new password and we will update your new password
+                </p>
+            </div>
+            <img src="/photo/reset.svg" class="image" alt="" />
+        </div>
+    </div>
 </div>
 <%- include("partials/footer") %>
