--- a/views/about.ejs
+++ b/views/about.ejs
@@ -17,12 +17,14 @@
                     You are going to fall in love with this nature
                 </h3>
                 <p class="paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae quas nostrum accusamus laborum
-                    adipisci vero distinctio, cupiditate perspiciatis iusto dignissimos nobis vel explicabo aspernatur
-                    tempora illum, magni voluptatibus incidunt error.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nam sed odio vero perspiciatis,
-                    laudantium inventore cumque delectus est quasi cupiditate quae. Est velit cumque explicabo
-                    reprehenderit beatae sequi unde.
+                    The main idea behind this app is to make people aware of
+                    wastage of water that they do in their daily lives. Pre-paid service stops you and forces you to
+                    think twice before irrational use. Amongst all environmental problems water conservation has always
+                    been ignored because of lack of awareness and free availability !! But soon half of the population
+                    won't be able to get safe drinking water, many parts of South Africa and even in our own nation, top
+                    cities like Chennai face water scarcity every year. It's high time now to solve this burning issue
+                    and save our thirsty future. We took our step now it's your turn to safeguard the future of your
+                    children.
                 </p>
                 <p>
                     <a class="btn btn-large" href="/">Go Back</a>
