--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,11 +14,16 @@
                     <h1>JAL</h1>
                     <!--<i class="fa fa-tint icon" aria-hidden="true"></i> -->
                     <img style="height: 100px; width: 100px;" src="/photo/water.png" alt="" class="d-none d-lg-inline">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, odio. Error
-                        veritatis, eveniet culpa nisi excepturi sunt vitae distinctio id facere, vel dolor? Illo,
-                        repellendus dolorem iste id rerum quasi! Lorem ipsum dolor sit amet consectetur adipisicing
-                        elit. Expedita aliquid odio vero praesentium quasi eius dolore adipisci et, doloribus error
-                        nisi optio, deleniti neque dolor, sapiente harum cupiditate debitis perferendis.</p>
+                    <p class="lead"> Amidst the ongoing ecological crisis, new amendments must be brought to bring in
+                        change. It's the
+                        duty of youth to bring out such innovations that will provide better life ahead to us and our
+                        children. Hence we bring you the 'JAL' App, which brings the world a step closer to a better and
+                        hydrating future. This easy to use app is a boon that makes you aware of the irrational water
+                        uses
+                        and in turn provides water to those who need. It provides pre-paid water services, like any
+                        other
+                        pre-paid product which one can avail by sitting at home. This provides long term and short term
+                        plans that may please everybody's pocket.</p>
                     <a class="btn" href="/about">Read More -></a>
                 </div>
             </div>
