--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -14,7 +14,6 @@ body {
     height: 35px;
 }
 
-
 .section-about {
     background-color: #f7f7f7;
     padding: 11rem 0;
@@ -211,7 +210,7 @@ body {
 }
 
 .paragraph {
-    font-size: 0.9rem;
+    font-size: 17px;
 }
 
 @media(min-width:900px) and (max-width: 1200px) {
