--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
 </head>
 
 <body class="body">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #2c3e50">
         <a class="navbar-brand" href="/"><img src="/photo/water.png" alt="" srcset="">JAL</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#blogAppContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="blogAppContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home <span
+                    <a class="nav-link active" href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home <span
                             class="sr-only"></span></a>
                 </li>
                 <li class="nav-item ">
